<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Oleksandr Bezushko
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a
  ~ copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the
  ~ Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall
  ~ be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  ~ OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~ HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_menu_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/discover_movies"
            android:icon="@drawable/ic_discover_menu_24dp"
            android:title="@string/movies" />

        <item
            android:id="@+id/discover_tv_shows"
            android:icon="@drawable/ic_discover_menu_24dp"
            android:title="@string/tv_shows" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_star_menu_24dp"
            android:title="@string/favourites" />
    </group>

    <group
        android:id="@+id/additional"
        android:checkableBehavior="none">

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_menu_24dp"
            android:title="@string/about" />
    </group>

</menu>